--- a/todoapp/src/App.css
+++ b/todoapp/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Joan&family=Poppins:ital,wght@1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Joan&family=Poppins:ital,wght@1,200&display=swap');
 .App {
   text-align: center;
 }
@@ -37,17 +39,27 @@
   }
 }
 
+#mainHead{
+  font-family: 'Joan', serif;
+  font-size: 6rem;
+}
+
 body {
   text-align: center;
   background-color: blanchedalmond;
+  background-color : #B3E8E5;
 }
 
 #addBtn{
+  height : 2.2rem;
+  width: 4rem;
   transition: 500ms;
-  background-color: #FF165D;
-  color : #F6F7D7;
+  background-color: rgb(180, 160, 180);
+  color : black;
+  font-weight: bold;
   border-radius: 8px;
-  border : 1.5px solid black;
+  border : 2px solid black;
+  
   padding: 4px 6px;
   margin: 1rem 0;
 }
@@ -56,6 +68,8 @@ body {
   transition: 300ms;
   background-color: #11999E;
   color : #F6F7D7;
+  cursor: pointer;
+  box-shadow : 2px 3px gray;
 
 }
 
@@ -81,16 +95,20 @@ body {
 .listItems{
   display: block;
   background-color: white;
-  padding: 5px 5px;
   margin: 6px 0;
-  border : 1px solid black;
+  /* border : 1px solid black; */
   border-radius: 5px;
+  border-style: outset;
+  height: 1.5rem;
+  padding: 1.1rem 1rem;
+  font-family: 'Joan', serif;
 }
 
 .listItems:hover{
   color : #1A5F7A;
-  background-color: #FFF89A;
+  background-color: #CCF3EE;
   cursor: pointer;
+  transform: Scale(102%);
 }
 
 .button-span{
@@ -105,19 +123,25 @@ body {
 .btn-done{
   background-color: rgba(73, 201, 107,0.5) ;
   border : 1.2px solid rgba(46, 128, 50);
+  height: 1.7rem;
+  width: 4rem;
 }
 
 .btn-remove{
   background-color: rgba(219, 53, 92,0.5) ;
   border : 1.2px solid rgba(219, 53, 92);
+  height: 1.7rem;
+  width: 4rem;
 }
 
 .btn-done:hover{
   background-color: rgba(73, 201, 107) ;
+  cursor: pointer
 }
 
 .btn-remove:hover{
   background-color: rgba(219, 53, 92) ;
+  cursor: pointer;
 }
 
 .taskName{
